prepare for xls import